# hydrogen

./: .clang-format  .clangd  .gitignore  .gitmodules  README.md  meson.build  meson.options
arch/x86_64/: meson.build
arch/x86_64/kernel/: meson.build
arch/x86_64/kernel/cpu/: cpu.c  idt.S  idt.c  lapic.c  mca.c  smp.S  smp.c  smp.h  xsave.c
arch/x86_64/kernel/drv/: acpi.c  debugcon.c  ioapic.c
arch/x86_64/kernel/include/arch/: context.h  cpudata.h  divide.h  elf.h  gsi.h  idle.h  irq.h  memmap.h  mmio.h  pio.h  pmap-types.h  pmap.h  sched.h  smp.h  stack.h  time.h  usercopy.h
arch/x86_64/kernel/include/x86_64/: cpu.h  cpuid.h  cr.h  hpet.h  idt.h  idtvec.h  init.h  ioapic.h  kvmclock.h  lapic.h  mca.h  msr.h  pit.h  segreg.h  smp.h  syscall.h  time.h  tsc.h  tss.h  usercopy.h  xcr.h  xsave.h
arch/x86_64/kernel/init/: main.S  main.c
arch/x86_64/kernel/mem/: usercopy.S  usercopy.c
arch/x86_64/kernel/private/kernel/arch/: pgshift.h
arch/x86_64/kernel/proc/: sched.S  sched.c
arch/x86_64/kernel/sys/: io.c  segments.c  syscall.S  syscall.c  transition.S  transition.c
arch/x86_64/kernel/time/: hpet.c  kvmclock.c  pit.c  time.c  tsc.c
arch/x86_64/lib/: meson.build  string.S
arch/x86_64/private/kernel/arch/: vdso.h
arch/x86_64/private/kernel/x86_64/: kvmclock.h  signal.h  syscall.h  tsc.h
arch/x86_64/public/: meson.build
arch/x86_64/public/hydrogen/arch/: signal.h
arch/x86_64/public/hydrogen/x86_64/: io.h  segments.h
arch/x86_64/vdso/: io.c  meson.build  segments.c  signal.c  start.S  time.c
arch/x86_64/vdso/include/arch/: syscall.h
component/acpi/kernel/: acpi.c  meson.build
include/hydrogen/: limits.h  memory.h  sched.h  stat.h  time.h  vfs.h
include/private/: compiler.h  errno.h  string.h
include/private/kernel/: compiler.h  kvmclock.h  pgsize.h  return.h  syscall.h  sysvecs.h  time.h  vdso.h
include/public/: meson.build
include/public/hydrogen/: dirent.h  errno.h  error.h  fcntl.h  handle.h  init.h  io.h  log.h  memory.h  thread.h  time.h  types.h  vfs.h
kernel/: kernel.lds  meson.build
kernel/cpu/: cpudata.c  smp.c
kernel/drv/: framebuffer.c  interrupt.c  terminal.c
kernel/drv/acpi/: acpi.c
kernel/drv/pci/: config-access.c
kernel/fs/: fifo.c  ramfs.c  specdev.c  vfs.c
kernel/include/: limine.h  sections.h  uacpi_libc.h
kernel/include/asm/: cpuid.h  cr.h  fsgsbase.h  idle.h  irq.h  mmio.h  msr.h  pio.h  segreg.h  tables.h  tlb.h  xcr.h
kernel/include/cpu/: cpu.h  cpudata.h  cpumask.h  exc.h  gdt.h  idt.h  irqvec.h  irqvecs.h  lapic.h  smp.h  tss.h  xsave.h
kernel/include/drv/: acpi.h  framebuffer.h  hpet.h  interrupt.h  pci.h  pic.h  terminal.h
kernel/include/drv/acpi/: acpi.h
kernel/include/drv/pci/: config-access.h
kernel/include/fs/: fifo.h  ramfs.h  vfs.h
kernel/include/init/: cmdline.h  init.h  initrd.h  main.h  task.h
kernel/include/mem/: heap.h  kmalloc.h  kvmm.h  layout.h  memlayout.h  memmap.h  pmap-flags.h  pmap-protos.h  pmap.h  pmem.h  pmm.h  usercopy.h  vheap.h  vmalloc.h  vmm.h
kernel/include/mem/object/: anonymous.h
kernel/include/proc/: event.h  mutex.h  process.h  rcu.h  sched.h  semaphore.h  signal.h
kernel/include/sched/: exec.h  mutex.h  proc.h  sched.h  sema.h
kernel/include/sys/: elf.h  exec.h  filesystem.h  handle.h  hydrogen.h  interrupt.h  memory.h  process.h  syscall.h  thread.h  transition.h  usermem.h  vdso.h
kernel/include/thread/: mutex.h  sched.h
kernel/include/time/: hpet.h  kvmclock.h  time.h  tsc.h
kernel/include/util/: endian.h  error.h  eventqueue.h  handle.h  hash.h  hlist.h  idmap.h  io.h  list.h  logging.h  object.h  panic.h  print.h  printk.h  refcount.h  ringbuf.h  shlist.h  slist.h  spinlock.h  time.h  xarray.h
kernel/init/: cmdline.c  initrd.c  main.c
kernel/mem/: kmalloc.c  kvmm.c  memmap.c  pmap.c  pmem.c  vmalloc.c  vmm.c
kernel/mem/object/: anonymous.c
kernel/proc/: event.c  mutex.c  process.c  rcu.c  sched.c  semaphore.c  signal.c
kernel/src/cpu/: cpu.c  exc.c  gdt.S  gdt.c  idt.S  idt.c  lapic.S  lapic.c  tss.c  xsave.c
kernel/src/drv/: acpi.c  pci.c  pic.c
kernel/src/fs/: ramfs.c  vfs.c
kernel/src/init/: init.c  main.S  main.c
kernel/src/mem/: heap.c  kmalloc.c  kvmm.c  pmap.c  pmm.c  vmalloc.c  vmm.c
kernel/src/sched/: exec.c  mutex.c  proc.c  sched.c
kernel/src/sys/: fd.c  io.c  proc.c  syscall.S  syscall.c  usermem.S  usermem.c  vdso.c  vfs.c  vmm.c
kernel/src/thread/: mutex.c  sched.S  sched.c
kernel/src/time/: hpet.c  kvmclock.c  time.c  tsc.c
kernel/src/util/: handle.c  io.c  logging.c  object.c  panic.c  print.c  spinlock.c  time.c  xarray.c
kernel/sys/: eventqueue.c  exec.c  filesystem.c  handle.c  hydrogen.c  interrupt.c  memory.c  process.c  syscall.c  thread.c  time.c  transition.c  vdso.c
kernel/util/: eventqueue.c  handle.c  object.c  panic.c  printk.c  ringbuf.c  spinlock.c  time.c
lib/: __popcountdi2.S  meson.build  string.c
private/: errno.h  string.h
private/kernel/: compiler.h  filesystem.h  pgsize.h  return.h  syscall.h  thread.h  types.h  vdso.h
public/: meson.build
public/hydrogen/: errno.h  eventqueue.h  fcntl.h  filesystem.h  handle.h  hydrogen.h  interrupt.h  ioctl-data.h  ioctl.h  limits.h  memory.h  process.h  signal.h  stat.h  termios.h  thread.h  time.h  types.h
subprojects/: uacpi.wrap
vdso/: assert.c  eventqueue.c  filesystem.c  handle.c  hydrogen.c  interrupt.c  io.c  log.c  memory.c  meson.build  process.c  sched.c  start.S  start.c  syscall.h  test.c  thread.c  time.c  vdso.h  vdso.lds  vfs.c
