install_headers(
    'hydrogen/errno.h',
    'hydrogen/eventqueue.h',
    'hydrogen/fcntl.h',
    'hydrogen/filesystem.h',
    'hydrogen/handle.h',
    'hydrogen/hydrogen.h',
    'hydrogen/ioctl-data.h',
    'hydrogen/ioctl.h',
    'hydrogen/limits.h',
    'hydrogen/memory.h',
    'hydrogen/process.h',
    'hydrogen/signal.h',
    'hydrogen/stat.h',
    'hydrogen/thread.h',
    'hydrogen/time.h',
    'hydrogen/types.h',
    preserve_path: true,
)
